Changes for 1.7
* Allowed "men" in International Draughts to capture backwards, which appears as a game option in Checkers. (veqryn)

* Created caching mechanism for the game notes, so that it is only in memory when the notes tab is open and otherwise can be cleared from memory if needed. (veqryn)

* Created a new Unit Attachment option, "damageableAA", which allows this AA gun type unit to cause damage to a two hitpoint unit instead of outright killing it. (veqryn)

* Fixed bug where AA shots on 2 hitpoint units with Choose AA Casualties on was resulting in no damage or killed unit. Also changed battle display to show "typeAA" for each AA Fire phase, instead of a generic identifier. (veqryn)

* Allowing custom AA hit and miss sounds for irregular AA types, with the folder being located at "battle_<typeaa>_hit" and "battle_<typeaa>_miss" (folder must be lowercase though), where <typeaa> is the unit attachment "typeAA" of that unit. (veqryn)

* Adding text labels to the Battle Calculator for the number of hitpoints and the total attack or defense power of each side. (veqryn) 

* Adding a new Hot Key "F" for 'Find Units', which will highlight all units you own that have movement left, but only during a movement phase. (frigoref)

* Allowed Edit Mode to add land units to a sea zone if there are either transports already there or transports also being added at the same time. (veqryn)

* Allowed Edit Mode to remove units owned by different players. (veqryn)

* Changed territory attachment "victoryCity" to allow integers instead of boolean, thereby allowing victory cities with greater value, and also added a tooltip to tech purchase phase to show what techs are in each category. (eurofabio)

* Allowed Edit Add Units to check if artwork exists for units not in a production frontier, and if so allow them to be created. (veqryn) 

* Added more info to Battle Calc including total TUV swing, and allowing retreat after losing all air units or having only x units left. (veqryn)