@@ -22,6 +22,7 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.UUID;
@@ -84,6 +85,29 @@ public class InstallMapDialog extends JDialog
 			}
 			text.append("</ul></html>");
 			JOptionPane.showMessageDialog(owner, text, "Update Your Maps", JOptionPane.INFORMATION_MESSAGE);
+		}
+	}
+	
+	public static void populateOutOfDateMapsListing(final Collection<String> listingToBeAddedTo, final Collection<DownloadFileDescription> gamesDownloadFileDescriptions)
+	{
+		if (listingToBeAddedTo == null)
+			return;
+		listingToBeAddedTo.clear();
+		for (final DownloadFileDescription d : gamesDownloadFileDescriptions)
+		{
+			if (d != null && !d.isDummyUrl())
+			{
+				File installed = new File(GameRunner2.getUserMapsFolder(), d.getMapName() + ".zip");
+				if (installed == null || !installed.exists())
+					installed = new File(GameSelectorModel.DEFAULT_MAP_DIRECTORY, d.getMapName() + ".zip");
+				if (installed != null && installed.exists())
+				{
+					if (d.getVersion() != null && d.getVersion().isGreaterThan(getVersion(installed), true))
+					{
+						listingToBeAddedTo.add(d.getMapName());
+					}
+				}
+			}
 		}
 	}
 	
