@@ -1,4 +1,6 @@
 Changes for 1.7
+* Creating a new monthly check to see if all maps are up to date, and if not then asking the user to update their maps. (veqryn)
+
 * Allowed "men" in International Draughts to capture backwards, which appears as a game option in Checkers. (veqryn)
 
 * Created caching mechanism for the game notes, so that it is only in memory when the notes tab is open and otherwise can be cleared from memory if needed. (veqryn)
